--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/node": "^20.10.3",
     "typescript": "^5.3.2",
     "vitest": "^1.0.1"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.10"
   }
 }
