--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/node": "^20.10.3",
     "typescript": "^5.3.2",
+    "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^1.0.1"
   },
   "dependencies": {
